--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/Form.css">
+    <link rel="stylesheet" href="./css/mon.css">
+    <link rel="stylesheet" href="./css/introduce.css"/>
     <link rel="stylesheet" href="./fonts/themify-icons/themify-icons.css"/>
     <title>Ẩm thực Thầy Y</title>
    
@@ -98,10 +100,10 @@
             </div>
             <div class="menu">
                 <ul class="nav_menu">
-                    <li><a href="/index.html">Trang chủ</a></li>
-                    <li><a href="/introduce.html">Giới Thiệu</a></li>
-                    <li><a href="#">Món Việt</a></li>
-                    <li><a href="#">Món Chay</a></li>
+                    <li><a href="./index.html">Trang chủ</a></li>
+                    <li><a href="./introduce.html">Giới Thiệu</a></li>
+                    <li><a href="./monviet.html">Món Việt</a></li>
+                    <li><a href="./monchay.html">Món Chay</a></li>
                 </ul>
             </div>
             <div class="search">
